# moria-timelapse

./: .gitignore  CMakeLists.txt  LICENSE  README.md  cmake-init.LICENSE
deploy/ubuntu-ppa/: recipe.txt
deploy/ubuntu-ppa/debian/: changelog  control  copyright
source/: CMakeLists.txt  version.h.in
source/applications/: CMakeLists.txt
source/applications/moria-timelapse/: CMakeLists.txt  CameraManager.cpp  CameraManager.h  ChangeDetector.hpp  FPSCounter.cpp  FPSCounter.h  IIR_2nd_temporal_filter.hpp  IntervalTimer.cpp  IntervalTimer.h  butterworth_2nd_IIR_params.h  butterworth_2nd_IIR_params.hpp  main.cpp  moria.cpp  moria.h  moria_errors.hpp  moria_options.cpp  moria_options.h  moria_options_boost.cpp  moria_options_boost.h  util.cpp  util.h
source/baselib/source/: baselib.cpp
source/tests/: CMakeLists.txt
